--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,22 @@
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Dependencies
+# Node
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+frontend/node_modules/
+express-backend/node_modules/
 
-# Build outputs
-/build
-/dist
-.DS_Store
-
-# Media and data files
-/express-backend/media/
-/express-backend/summaries/
-
-# Log files
+# Logs
 *.log
+frontend/frontend.log
+express-backend/express.log
+express-backend/express-server.log
 
-# IDE specific files
-.idea/
-.vscode/
-*.swp
-*.swo 
+# Build artifacts
+dist/
+build/
+
+# OS / editor
+.DS_Store
+.env
+.env.*.local
+
+# App-specific (optional if you don't want large assets in repo)
+express-backend/media/
