--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,21 @@ express-backend/node_modules/
 frontend/frontend.log
 express-backend/express.log
 express-backend/express-server.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Build artifacts
 dist/
 build/
+coverage/
 
 # OS / editor
 .DS_Store
 .env
 .env.*.local
+.vscode/
+.idea/
 
 # App-specific (optional if you don't want large assets in repo)
 express-backend/media/
